data/derived/sp14/progs/unify/prog3774.ml.out
Characters 66-76:
  else (intlist (x / 10)) @ [x mod 10] 
                            ^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
